--- a/src/css/education.css
+++ b/src/css/education.css
@@ -19,7 +19,7 @@
 .timeline-item {
     display: flex;
     opacity: 0;
-  transform: translateX(100px); 
+  transform: translateX(50px); 
   transition: opacity 1s ease-in-out, transform 1s ease-in-out;
    
     justify-content: flex-start;
@@ -27,6 +27,9 @@
     margin-top: 10px;
     position: relative;
     padding-left: 40px;
+    /* border: 1px solid green; */
+    margin-right: 50px;
+
 }
 
 .timeline-item::before {
